clean-up vertex